# local-kind

./: .gitignore  Makefile  README.md  setup.sh
ml-cluster/: config.yaml
setup/: README.md  cilium.sh  cilium_cli.sh  helm.sh  kind.sh
tfidf-ray/: Dockerfile  application.yaml  pyproject.toml
tfidf-ray/project/: notebook.ipynb  serve.py  train.py
